[package]
name = "cloud-core-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
jsonwebtoken = "8.1.0"
chrono = {version = "0.4.19", features = ["serde"]}
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
bcrypt = "0.15.0"
thiserror = "1.0.43"

[dev-dependencies]
serde_json = "1.0.59"


[lib]
name = "cloud_core_utils"
path = "src/lib.rs"
